--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoes?serverTimezone=America/Chicago
-spring.datasource.username=root
+spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
+spring.datasource.url:jdbc:mysql://localhost:3306/sportyshoes?serverTimezone=America/Chicago
+spring.datasource.username:root
 #spring.datasource.password=root@123
-spring.mvc.view.prefix=/			
-spring.mvc.view.suffix=.jsp
+server.port = 8181
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
