--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.location=${java.io.tmpdir}
+#spring.servlet.multipart.max-file-size=128KB
+#spring.servlet.multipart.max-request-size=128KB
